# DiscordBot

./: .gitignore  README.md  chatbot.py  intents.json  main.py  pyproject.toml  start.sh  startup.xml  stop.sh
standard/: startup.xml.bak  std-65percent.aiml  std-atomic.aiml  std-brain.aiml  std-robot.aiml  std-sextalk.aiml  std-sports.aiml  std-srai.aiml  usr-Kick.aiml
