[tool.poetry]
name = "discordBot"
version = "0.0.1"
description = "A discord bot"
authors = ["Your Name <you@example.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.8"
discord = "^1.7.3"
python-aiml = "0.9.3"
regex = "^2020.6.8"
python-dotenv =  "^0.19.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
